update: 新增SubmitBasic表，修复了外键错误，新增了获取提交列表等信息
