# backend/docs/swagger.yaml
@@ -6,7 +6,7 @@ definitions:
         type: integer
       data: {}
       message:
-        example: fail
+        example: something went wrong
         type: string
     type: object
   service.ListData:
@@ -30,7 +30,42 @@ definitions:
 info:
   contact: {}
 paths:
-  /problems:
+  /problems/details:
+    get:
+      parameters:
+      - description: 问题唯一id
+        in: query
+        name: problem_identity
+        type: string
+      responses:
+        "200":
+          description: 成功返回问题详情
+          schema:
+            $ref: '#/definitions/service.SuccessResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "403":
+          description: 权限不足
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "404":
+          description: 资源不存在
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+      summary: 问题详情
+      tags:
+      - 公共方法
+  /problems/lists:
     get:
       parameters:
       - description: 请输入页数，默认为1
@@ -44,6 +79,10 @@ paths:
       - description: 模糊搜索关键词
         in: query
         name: keyword
+        type: string
+      - description: 分类唯一id
+        in: query
+        name: category_identity
         type: string
       responses:
         "200":
@@ -71,6 +110,92 @@ paths:
           schema:
             $ref: '#/definitions/service.FailResponse'
       summary: 问题列表
+      tags:
+      - 公共方法
+  /submit/lists:
+    get:
+      parameters:
+      - description: 请输入页数，默认为1
+        in: query
+        name: page
+        type: integer
+      - description: 请输入每页结果个数，默认为20
+        in: query
+        name: size
+        type: integer
+      - description: 问题唯一id
+        in: query
+        name: problem_identity
+        type: string
+      - description: 用户唯一id
+        in: query
+        name: user_identity
+        type: string
+      - description: 状态
+        in: query
+        name: status
+        type: integer
+      responses:
+        "200":
+          description: 成功返回列表数据
+          schema:
+            $ref: '#/definitions/service.SuccessResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "403":
+          description: 权限不足
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "404":
+          description: 资源不存在
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+      summary: 问题列表
+      tags:
+      - 公共方法
+  /users/details:
+    get:
+      parameters:
+      - description: 用户唯一id
+        in: query
+        name: identity
+        type: string
+      responses:
+        "200":
+          description: 成功返回列表数据
+          schema:
+            $ref: '#/definitions/service.SuccessResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "403":
+          description: 权限不足
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "404":
+          description: 资源不存在
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+      summary: 用户详情
       tags:
       - 公共方法
 swagger: "2.0"
